<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_white">

    <!-- Overview category -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/personal_details"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/full_name"
        style="@style/EditorFieldStyle"
        android:layout_width="match_parent"
        android:autofillHints=""
        android:hint="@string/full_name"
        android:layout_marginBottom="20dp"
        android:inputType="textCapWords" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Date of Birth"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choose_date"
        android:onClick="openDatePicker"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*You must be atleast 18 years old"
        android:layout_marginBottom="50dp"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center"
        tools:ignore="RtlHardcoded,VectorDrawableCompat" />



</LinearLayout>
